compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__singleton_record_reverse_order.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\npub type Wibble {\n  Wibble\n  Wobble\n}\n\npub fn is_wibble_reverse(w: Wibble) -> Bool {\n  Wibble == w\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble
  Wobble
}

pub fn is_wibble_reverse(w: Wibble) -> Bool {
  Wibble == w
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {}
export const Wibble$Wibble$const = new Wibble();
export const Wibble$Wibble = () => Wibble$Wibble$const;
export const Wibble$isWibble = (value) => value instanceof Wibble;

export class Wobble extends $CustomType {}
export const Wibble$Wobble$const = new Wobble();
export const Wibble$Wobble = () => Wibble$Wobble$const;
export const Wibble$isWobble = (value) => value instanceof Wobble;

export function is_wibble_reverse(w) {
  return w instanceof Wibble;
}
