compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__types_must_be_rendered_before_functions.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\npub fn one() { One }\npub type One { One }\n"
---
----- SOURCE CODE

pub fn one() { One }
pub type One { One }


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class One extends $CustomType {}
export const One$One$const = new One();
export const One$One = () => One$One$const;
export const One$isOne = (value) => value instanceof One;

export function one() {
  return One$One$const;
}
